[package]
name = "graphql-to-jddf"
version = "0.1.0"
authors = ["Ulysse Carion <ulyssecarion@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
graphql_client = "0.8"
reqwest = { version = "0.10", features = ["json"] }
failure = "0.1"
tokio = { version = "0.2", features = ["macros"] }
jddf = "0.3"
